--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
     </header>
 
     <section class="presentation">
-        <div class="photo">
-            <img src="photom.jpg" alt="Ma photo">
-        </div>
+        <img src="image/im.png" alt="Photo de Paul Aquina" class="photo">
         <div class="texte">
+            
             <h1>Salut, je suis <span class="nom">PAUL Aquina</span></h1>
             <p>Je suis passionné par le développement web, la création graphique et les réseaux. J'aime apprendre et relever de nouveaux défis techniques.</p>
             
