--- a/projets.html
+++ b/projets.html
@@ -1,170 +1,230 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mes Projets</title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mes Projets</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="projets.html">Projets</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="citation.html">citations</a></li>
+<header>
+  <nav>
+    <ul>
+      <li><a href="index.html">Accueil</a></li>
+      <li><a href="projets.html" class="active">Projets</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="blog.html">Blog</a></li>
+      <li><a href="citation.html">Citations</a></li>
+    </ul>
+  </nav>
+</header>
 
-            </ul>
-        </nav>
-    </header>
+<section class="projets">
+  <h1>Mes Projets</h1>
 
-    <section class="projets">
-        <h1>Mes Projets</h1>
-
-        <div class="projet">
+  <div class="projet">
     <img src="image/horloge.png" alt="Projet 1">
     <div class="details">
-      <h2>Horloge fonctionnel</h2>
+      <h2>Horloge fonctionnelle</h2>
       <p>Une horloge fonctionnelle réalisée avec JavaScript pour afficher l'heure en temps réel.</p>
-      <a href="https://github.com/ton-github/projet-horloge" target="_blank">Voir sur GitHub</a>
+      <p class="technologies"><strong>Technologies :</strong> JavaScript, HTML, CSS</p>
+      <a href="https://tina509.github.io/projet-horloge/" target="_blank">Voir sur GitHub</a>
     </div>
   </div>
 
-        <div class="projet">
-            <img src="image/image.png" alt="Projet 2">
-            <div class="details">
-                <h2>Générateur de Citations</h2>
-                <p>Application web utilisant une API pour afficher aléatoirement des citations inspirantes.</p>
-                <a href="https://github.com/ton-github/generateur-citations" target="_blank">Voir sur GitHub</a>
-            </div>
-        </div>
-
-        <div class="projet">
-            <img src="image/liste.png" alt="Projet 3">
-            <div class="details">
-                <h2>Mini ToDo Liste</h2>
-                <p>Liste de tâches simple avec sauvegarde locale grâce au LocalStorage, développée en JavaScript.</p>
-                <a href="https://github.com/ton-github/todo-list" target="_blank">Voir sur GitHub</a>
-            </div>
-        </div>
-
-        
-  
+  <div class="projet">
+    <img src="image/image.png" alt="Projet 2">
+    <div class="details">
+      <h2>Générateur de Citations</h2>
+      <p>Application web utilisant une API pour afficher aléatoirement des citations inspirantes.</p>
+      <p class="technologies"><strong>Technologies :</strong> JavaScript, API REST, HTML, CSS</p>
+      <a href="https://tina509.github.io/generateur-citations/" target="_blank">Voir sur GitHub</a>
+    </div>
+  </div>
 
   <div class="projet">
-    <img src="image/reseau.png" alt="Projet 3">
+    <img src="image/liste.png" alt="Projet 3">
+    <div class="details">
+      <h2>Mini ToDo Liste</h2>
+      <p>Liste de tâches simple avec sauvegarde locale grâce au LocalStorage, développée en JavaScript.</p>
+      <p class="technologies"><strong>Technologies :</strong> JavaScript, LocalStorage, HTML, CSS</p>
+      <a href="https://tina509.github.io/todo-list/" target="_blank">Voir sur GitHub</a>
+    </div>
+  </div>
+
+  <div class="projet">
+    <img src="image/reseau.png" alt="Projet 4">
     <div class="details">
       <h2>Projet Réseau</h2>
       <p>Configuration complète de réseaux avec Cisco, VLAN, routage et sécurité.</p>
-      <a href="https://github.com/ton-github/projet-reseau" target="_blank">Voir sur GitHub</a>
+      <p class="technologies"><strong>Technologies :</strong> Cisco IOS, VLAN, Routage, Sécurité réseau</p>
+     <p><em>Projet non disponible sur GitHub.</em></p>
+    <a href="contact.html" class="btn-contact" style="display:inline-block; padding:8px 15px; background-color:#b366ff; color:#2c003e; border-radius:5px; text-decoration:none; font-weight:bold;">Contactez-moi</a>
+
     </div>
   </div>
 
   <div class="projet">
-    <img src="image/package.png" alt="projet 4">
+    <img src="image/package.png" alt="Projet 5">
     <div class="details">
       <h2>Flyer Studio</h2>
       <p>Création de flyers professionnels pour des studios avec Photoshop.</p>
-      <a href="https://github.com/ton-github/flyer-studio" target="_blank">Voir sur GitHub</a>
+      <p class="technologies"><strong>Technologies :</strong> Photoshop, Design graphique</p>
+     <p><em>Projet non disponible sur GitHub.</em></p>
+    <a href="contact.html" class="btn-contact" style="display:inline-block; padding:8px 15px; background-color:#b366ff; color:#2c003e; border-radius:5px; text-decoration:none; font-weight:bold;">Contactez-moi</a>
+
     </div>
   </div>
 
   <div class="projet">
-    <img src="image/flyer.png" alt="projet 5">
+    <img src="image/flyer.png" alt="Projet 6">
     <div class="details">
       <h2>Flyer</h2>
       <p>Design et mise en page de flyers variés pour événements et promotions.</p>
-      <a href="https://github.com/ton-github/flyer" target="_blank">Voir sur GitHub</a>
+          <p class="technologies"><strong>Technologies :</strong> Photoshop, InDesign</p>
+       <p><em>Projet non disponible sur GitHub.</em></p>
+    <a href="contact.html" class="btn-contact" style="display:inline-block; padding:8px 15px; background-color:#b366ff; color:#2c003e; border-radius:5px; text-decoration:none; font-weight:bold;">Contactez-moi</a>
+
     </div>
   </div>
 
   <div class="projet">
-    <img src="image/shop.png" alt="projet 6">
+    <img src="image/shop.png" alt="Projet 7">
     <div class="details">
       <h2>Shop</h2>
-      <p>Design et mise en page de flyers variés pour Business</p>
-      <a href="https://github.com/ton-github/shop" target="_blank">Voir sur GitHub</a>
+      <p>Design et mise en page de flyers variés pour Business.</p>
+      <p class="technologies"><strong>Technologies :</strong> Photoshop, Design graphique</p>
+     <p><em>Projet non disponible sur GitHub.</em></p>
+    <a href="contact.html" class="btn-contact" style="display:inline-block; padding:8px 15px; background-color:#b366ff; color:#2c003e; border-radius:5px; text-decoration:none; font-weight:bold;">Contactez-moi</a>
+
     </div>
   </div>
 
   <div class="projet">
-    <img src="image/e-commerce.png" alt="projet 7">
+    <img src="image/e-commerce.png" alt="Projet 8">
     <div class="details">
       <h2>Site Mini Marché</h2>
-      <p>Site web pour un mini marché avec catalogue produits et panier.</p>
-      <a href="https://github.com/ton-github/mini-marche" target="_blank">Voir sur GitHub</a>
+      <p>application web pour un mini marché avec catalogue produits et panier avec django.</p>
+          <p class="technologies"><strong>Technologies :</strong> HTML, CSS, JavaScript</p>
+       <p><em>Projet non disponible sur GitHub.</em></p>
+    <a href="contact.html" class="btn-contact" style="display:inline-block; padding:8px 15px; background-color:#b366ff; color:#2c003e; border-radius:5px; text-decoration:none; font-weight:bold;">Contactez-moi</a>
+
     </div>
   </div>
 
   <div class="projet">
-    <img src="image/panier.png" alt="Projet 8">
+    <img src="image/panier.png" alt="Projet 9">
     <div class="details">
       <h2>Projet Django</h2>
       <p>Application web développée avec Django pour gestion de contenu.</p>
-      <a href="https://github.com/ton-github/projet-django" target="_blank">Voir sur GitHub</a>
+      <p class="technologies"><strong>Technologies :</strong> Python, Django, HTML, CSS</p>
+       <p><em>Projet non disponible sur GitHub.</em></p>
+    <a href="contact.html" class="btn-contact" style="display:inline-block; padding:8px 15px; background-color:#b366ff; color:#2c003e; border-radius:5px; text-decoration:none; font-weight:bold;">Contactez-moi</a>
+
     </div>
   </div>
-   <div class="projet">
-    <img src="image/formulaire.png" alt="Projet 9">
+
+  <div class="projet">
+    <img src="image/formulaire.png" alt="Projet 10">
     <div class="details">
       <h2>Projet Formulaire</h2>
       <p>Création d'un formulaire interactif avec validation en JavaScript pour un site web moderne.</p>
-      <a href="https://github.com/ton-github/projet-formulaire" target="_blank">Voir sur GitHub</a>
+      <p class="technologies"><strong>Technologies :</strong> JavaScript, HTML, CSS</p>
+      <a href="https://tina509.github.io/projet-formulaire/" target="_blank">Voir sur GitHub</a>
     </div>
   </div>
 
   <div class="projet">
-    <img src="image/arduino.png" alt="Projet 10">
+    <img src="image/arduino.png" alt="Projet 11">
     <div class="details">
       <h2>Projet Arduino</h2>
       <p>Montage électronique et programmation avec Arduino : allumage de LED, capteurs, et petits automatismes.</p>
-      <a href="https://github.com/ton-github/projet-arduino" target="_blank">Voir sur GitHub</a>
+          <p class="technologies"><strong>Technologies :</strong> Arduino, C/C++</p>
+       <p><em>Projet non disponible sur GitHub.</em></p>
+    <a href="contact.html" class="btn-contact" style="display:inline-block; padding:8px 15px; background-color:#b366ff; color:#2c003e; border-radius:5px; text-decoration:none; font-weight:bold;">Contactez-moi</a>
+
     </div>
   </div>
+
   <div class="projet">
-    <img src="image/slider.png" alt="Projet 11">
+    <img src="image/slider.png" alt="Projet 12">
     <div class="details">
       <h2>Slider d'Images</h2>
       <p>Un slider d'images dynamique réalisé avec JavaScript permettant de faire défiler des photos automatiquement.</p>
-      <a href="https://github.com/ton-github/projet-slider" target="_blank">Voir sur GitHub</a>
-    </div>
-  </div>
-  <div class="projet">
-    <img src="image/horloge.png" alt="Projet 1">
-    <div class="details">
-      <h2>Horloge fonctionnel</h2>
-      <p>Une horloge fonctionnelle réalisée avec JavaScript pour afficher l'heure en temps réel.</p>
-      <a href="https://github.com/ton-github/projet-horloge" target="_blank">Voir sur GitHub</a>
+      <p class="technologies"><strong>Technologies :</strong> JavaScript, HTML, CSS</p>
+      <a href="https://tina509.github.io/projet-slider/" target="_blank">Voir sur GitHub</a>
     </div>
   </div>
 
-  
-  
-
-  
   <div class="projet">
-    <img src="image/compteur.png" alt="Projet Compteur">
+    <img src="image/photo.png" alt="Projet 13">
     <div class="details">
       <h2>Compteur</h2>
       <p>Un compteur numérique réalisé avec JavaScript permettant d'incrémenter une valeur à chaque clic.</p>
-      <a href="https://github.com/ton-github/projet-compteur" target="_blank">Voir sur GitHub</a>
+       <p class="technologies"><strong>Technologies :</strong> JavaScript, HTML, CSS</p>
+      <a href="https://tina509.github.io/projet-compteur/" target="_blank">Voir sur GitHub</a>
     </div>
   </div>
 
+  <!-- Bouton Ajouter Projet -->
+  <div style="text-align: center; margin-top: 30px;">
+    <button onclick="afficherFormulaire()" style="padding: 10px 20px; background-color: #b366ff; color: #2c003e; border: none; border-radius: 5px; cursor: pointer; font-weight: bold;">Ajouter un projet</button>
+  </div>
 
-
+  <!-- Formulaire caché -->
+  <div id="formulaireAjout" style="display: none; margin-top: 20px; text-align: center;">
+    <input type="text" id="titreProjet" placeholder="Titre du projet" style="padding: 10px; width: 50%; margin: 5px;"><br>
+    <input type="text" id="descriptionProjet" placeholder="Description du projet" style="padding: 10px; width: 50%; margin: 5px;"><br>
+    <input type="text" id="lienProjet" placeholder="Lien GitHub" style="padding: 10px; width: 50%; margin: 5px;"><br>
+    <input type="text" id="imageProjet" placeholder="Lien de l'image (ex: image/monimage.png)" style="padding: 10px; width: 50%; margin: 5px;"><br>
+    <button onclick="ajouterProjet()" style="padding: 10px 20px; background-color: #b366ff; color: #2c003e; border: none; border-radius: 5px; cursor: pointer; font-weight: bold; margin-top: 10px;">Valider</button>
+  </div>
 
 </section>
 
+<footer>
+  <p>&copy; 2025 - Mon Portfolio</p>
+</footer>
 
-    </section>
+<script>
+  function afficherFormulaire() {
+    const form = document.getElementById('formulaireAjout');
+    form.style.display = form.style.display === 'none' ? 'block' : 'none';
+  }
 
-    <footer>
-        <p>&copy; 2025 - Mon Portfolio</p>
-    </footer>
+  function ajouterProjet() {
+    const titre = document.getElementById('titreProjet').value.trim();
+    const description = document.getElementById('descriptionProjet').value.trim();
+    const lien = document.getElementById('lienProjet').value.trim();
+    const image = document.getElementById('imageProjet').value.trim();
+
+    if (titre && description && lien && image) {
+      const div = document.createElement('div');
+      div.className = 'projet';
+      div.innerHTML = `
+        <img src="${image}" alt="${titre}">
+        <div class="details">
+          <h2>${titre}</h2>
+          <p>${description}</p>
+          <a href="${lien}" target="_blank">Voir sur GitHub</a>
+        </div>
+      `;
+
+      document.querySelector('.projets').insertBefore(div, document.getElementById('formulaireAjout').parentElement);
+
+      // Réinitialiser le formulaire
+      document.getElementById('titreProjet').value = '';
+      document.getElementById('descriptionProjet').value = '';
+      document.getElementById('lienProjet').value = '';
+      document.getElementById('imageProjet').value = '';
+
+      afficherFormulaire();
+    } else {
+      alert('Veuillez remplir tous les champs.');
+    }
+  }
+</script>
 
 </body>
 </html>
