--- a/contact.html
+++ b/contact.html
@@ -8,46 +8,53 @@
 </head>
 <body>
 
-  <header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Accueil</a></li>
-        <li><a href="projets.html">Projets</a></li>
-        <li><a href="contact.html" class="active">Contact</a></li>
-        <li><a href="blog.html">Blog</a></li>
-        <li><a href="citation.html">citations</a></li>
+<header>
+  <nav>
+    <ul>
+      <li><a href="index.html">Accueil</a></li>
+      <li><a href="projets.html">Projets</a></li>
+      <li><a href="contact.html" class="active">Contact</a></li>
+      <li><a href="blog.html">Blog</a></li>
+      <li><a href="citation.html">Citations</a></li>
+    </ul>
+  </nav>
+</header>
 
+<section class="contact-section">
+  <h1>Contactez-moi</h1>
 
-      </ul>
-    </nav>
-  </header>
+  <form class="contact-form" onsubmit="envoyerMessage(event)">
+    <label for="name">Nom :</label>
+    <input type="text" id="name" name="name" required />
 
-  <section class="contact-section">
-    <h1>Contactez-moi</h1>
+    <label for="email">Email :</label>
+    <input type="email" id="email" name="email" required />
 
-    <form class="contact-form" action="mailto:votremail@example.com" method="post" enctype="text/plain">
-      <label for="name">Nom :</label>
-      <input type="text" id="name" name="name" required />
+    <label for="message">Message :</label>
+    <textarea id="message" name="message" rows="6" required></textarea>
 
-      <label for="email">Email :</label>
-      <input type="email" id="email" name="email" required />
+    <button type="submit">Envoyer</button>
+  </form>
 
-      <label for="message">Message :</label>
-      <textarea id="message" name="message" rows="6" required></textarea>
+  <div class="contact-info">
+    <h2>Mes coordonnées</h2>
+    <p>Email : <a href="mailto:paulaquina97@gmail.com">paulaquina97@gmail.com</a></p>
+    <p>Téléphone : +509 38 10 08 28</p>
+    <p>GitHub: tina509</p>
+  </div>
+</section>
 
-      <button type="submit">Envoyer</button>
-    </form>
+<footer>
+  <p>&copy; 2025 - Mon Portfolio</p>
+</footer>
 
-    <div class="contact-info">
-      <h2>Mes coordonnées</h2>
-      <p>Email : <a href="mailto:votremail@example.com">paulaquina97@gmail.com</a></p>
-      <p>Téléphone : +509 38 10 08 28</p>
-    </div>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 - Mon Portfolio</p>
-  </footer>
+<script>
+  function envoyerMessage(e) {
+    e.preventDefault(); 
+    alert("Merci pour votre message. Je prendrai contact avec vous dans les plus brefs délais.");
+    document.querySelector('.contact-form').reset(); 
+  }
+</script>
 
 </body>
 </html>
