--- a/projets.html
+++ b/projets.html
@@ -167,12 +167,12 @@
     </div>
   </div>
 
-  <!-- Bouton Ajouter Projet -->
+  <!-- Bouton Ajouter Projet
   <div style="text-align: center; margin-top: 30px;">
     <button onclick="afficherFormulaire()" style="padding: 10px 20px; background-color: #b366ff; color: #2c003e; border: none; border-radius: 5px; cursor: pointer; font-weight: bold;">Ajouter un projet</button>
   </div>
 
-  <!-- Formulaire caché -->
+  Formulaire caché 
   <div id="formulaireAjout" style="display: none; margin-top: 20px; text-align: center;">
     <input type="text" id="titreProjet" placeholder="Titre du projet" style="padding: 10px; width: 50%; margin: 5px;"><br>
     <input type="text" id="descriptionProjet" placeholder="Description du projet" style="padding: 10px; width: 50%; margin: 5px;"><br>
@@ -181,13 +181,13 @@
     <button onclick="ajouterProjet()" style="padding: 10px 20px; background-color: #b366ff; color: #2c003e; border: none; border-radius: 5px; cursor: pointer; font-weight: bold; margin-top: 10px;">Valider</button>
   </div>
 
-</section>
+</section> -->
 
 <footer>
   <p>&copy; 2025 - Mon Portfolio</p>
 </footer>
 
-<script>
+<!-- <script>
   function afficherFormulaire() {
     const form = document.getElementById('formulaireAjout');
     form.style.display = form.style.display === 'none' ? 'block' : 'none';
@@ -224,7 +224,7 @@
       alert('Veuillez remplir tous les champs.');
     }
   }
-</script>
+</script> -->
 
 </body>
 </html>
