--- a/citation.html
+++ b/citation.html
@@ -100,41 +100,41 @@
 
   <div class="citation">
     <span>"Ce n'est pas parce que c'est difficile que nous n'osons pas, c'est parce que nous n'osons pas que c'est difficile." – Sénèque</span>
-    <button class="supprimer-btn" onclick="supprimer(this)">Supprimer</button>
+    <!-- <button class="supprimer-btn" onclick="supprimer(this)">Supprimer</button> -->
   </div>
   <div class="citation">
     <span>"La technologie ne remplace jamais le travail acharné, elle le complète."</span>
-    <button class="supprimer-btn" onclick="supprimer(this)">Supprimer</button>
+    <!-- <button class="supprimer-btn" onclick="supprimer(this)">Supprimer</button> -->
   </div>
   <div class="citation">
     <span>"Tout semble impossible jusqu'à ce que ce soit fait." – Nelson Mandela</span>
-    <button class="supprimer-btn" onclick="supprimer(this)">Supprimer</button>
+    <!-- <button class="supprimer-btn" onclick="supprimer(this)">Supprimer</button> -->
   </div>
   <div class="citation">
     <span>"Si vous tombez sept fois, relevez-vous huit." – Proverbe japonais</span>
-    <button class="supprimer-btn" onclick="supprimer(this)">Supprimer</button>
+    <!-- <button class="supprimer-btn" onclick="supprimer(this)">Supprimer</button> -->
   </div>
   <div class="citation">
     <span>"Les plus grands développeurs ont été des débutants un jour. Continuez d'apprendre."</span>
-    <button class="supprimer-btn" onclick="supprimer(this)">Supprimer</button>
+    <!-- <button class="supprimer-btn" onclick="supprimer(this)">Supprimer</button> -->
   </div>
   <div class="citation">
     <span>"N'abandonnez jamais. Le code qui ne fonctionne pas aujourd'hui vous apprendra quelque chose demain."</span>
-    <button class="supprimer-btn" onclick="supprimer(this)">Supprimer</button>
+    <!-- <button class="supprimer-btn" onclick="supprimer(this)">Supprimer</button> -->
   </div>
 
-  <div class="add-section">
+  <!-- <div class="add-section">
     <input type="text" id="newCitation" placeholder="Écris ta citation ici...">
     <button onclick="ajouterCitation()">Ajouter</button>
   </div>
 
-</section>
+</section> -->
 
 <footer>
   <p>&copy; 2025 - Mon Portfolio</p>
 </footer>
 
-<script>
+<!-- <script>
   function supprimer(button) {
     button.parentElement.remove();
   }
@@ -165,7 +165,7 @@
       alert('Veuillez entrer une citation.');
     }
   }
-</script>
+</script> -->
 
 </body>
 </html>
