--- a/blog.html
+++ b/blog.html
@@ -125,13 +125,13 @@
     - Privilégiez des couleurs et typographies harmonieuses.<br>
     - Ne négligez jamais l'accessibilité.
     </p>
-    <button class="supprimer-btn" onclick="supprimer(this)">Supprimer</button>
+    <!-- <button class="supprimer-btn" onclick="supprimer(this)">Supprimer</button> -->
   </div>
 
   <div class="article">
     <h2>Pourquoi apprendre JavaScript est indispensable</h2>
     <p>JavaScript permet d'ajouter de l'interactivité à vos sites web : boutons dynamiques, formulaires intelligents, animations... C'est aussi la porte d'entrée vers des frameworks modernes comme React ou Vue.js.</p>
-    <button class="supprimer-btn" onclick="supprimer(this)">Supprimer</button>
+    <!-- <button class="supprimer-btn" onclick="supprimer(this)">Supprimer</button> -->
   </div>
 
   <div class="article">
@@ -141,7 +141,7 @@
     - GitHub (versionnage et partage de projets)<br>
     - Photoshop (design rapide)<br>
     - Remove Background (enlever les arrière-plans)
-    </p>
+    <!-- </p>
     <button class="supprimer-btn" onclick="supprimer(this)">Supprimer</button>
   </div>
 
@@ -188,7 +188,7 @@
       alert('Veuillez remplir le titre et le contenu.');
     }
   }
-</script>
+</script> -->
 
 </body>
 </html>
