--- a/projets.html
+++ b/projets.html
@@ -1,16 +1,196 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Mes Projets</title>
-  <link rel="stylesheet" href="css/style.css">
+
+  <style>
+    /* === STYLE GLOBAL === */
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #2c003e;
+      color: white;
+      min-height: 100vh;
+    }
+
+    /* === HEADER & NAVIGATION === */
+    header {
+      background-color: #3d0066;
+      padding: 15px 20px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.5);
+      position: sticky;
+      top: 0;
+      z-index: 100;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+
+    nav ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      gap: 30px;
+    }
+
+    nav ul li a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 18px;
+      padding: 6px 12px;
+      border-radius: 5px;
+      transition: background-color 0.3s;
+      display: block;
+    }
+
+    nav ul li a:hover,
+    nav ul li a.active {
+      background-color: #b366ff;
+      color: #2c003e;
+    }
+
+    /* Hamburger button - hidden on desktop */
+    #menu-toggle {
+      display: none;
+      font-size: 28px;
+      background: none;
+      border: none;
+      color: white;
+      cursor: pointer;
+    }
+
+    /* === RESPONSIVE === */
+    @media (max-width: 768px) {
+      nav ul {
+        position: fixed;
+        top: 60px;
+        right: 0;
+        background-color: #3d0066;
+        width: 200px;
+        height: calc(100% - 60px);
+        flex-direction: column;
+        gap: 0;
+        padding-top: 20px;
+        transform: translateX(100%);
+        transition: transform 0.3s ease-in-out;
+        box-shadow: -2px 0 5px rgba(0,0,0,0.5);
+      }
+
+      nav ul.active {
+        transform: translateX(0);
+      }
+
+      nav ul li {
+        margin-bottom: 20px;
+        padding-left: 20px;
+      }
+
+      #menu-toggle {
+        display: block;
+      }
+    }
+
+    /* === SECTION PROJETS === */
+    .projets {
+      padding: 50px 20px;
+      color: white;
+      text-align: center;
+      max-width: 900px;
+      margin: auto;
+    }
+
+    .projets h1 {
+      font-size: 36px;
+      color: #d9b3ff;
+      margin-bottom: 40px;
+    }
+
+    .projet {
+      display: flex;
+      flex-wrap: wrap;
+      background-color: #3d0066;
+      margin: 20px auto;
+      max-width: 800px;
+      border-radius: 15px;
+      overflow: hidden;
+      box-shadow: 0 0 15px #00000070;
+      transition: transform 0.3s;
+    }
+
+    .projet:hover {
+      transform: scale(1.03);
+    }
+
+    .projet img {
+      width: 300px;
+      height: auto;
+      object-fit: cover;
+    }
+
+    .details {
+      padding: 20px;
+      flex: 1;
+      text-align: left;
+    }
+
+    .details h2 {
+      color: #d9b3ff;
+      margin-top: 0;
+    }
+
+    .details p {
+      margin: 15px 0;
+      line-height: 1.6;
+    }
+
+    .details a {
+      display: inline-block;
+      background-color: #b366ff;
+      color: white;
+      text-decoration: none;
+      padding: 10px 20px;
+      border-radius: 5px;
+      transition: background-color 0.3s;
+    }
+
+    .details a:hover {
+      background-color: #d9b3ff;
+      color: #2c003e;
+    }
+
+    /* Responsive projets for mobile */
+    @media (max-width: 768px) {
+      .projet {
+        flex-direction: column;
+        max-width: 100%;
+      }
+
+      .projet img {
+        width: 100%;
+        border-radius: 15px 15px 0 0;
+      }
+    }
+
+    /* Footer */
+    footer {
+      text-align: center;
+      padding: 20px;
+      background-color: #3d0066;
+      color: white;
+      margin-top: 40px;
+    }
+  </style>
 </head>
 <body>
 
 <header>
+  <button id="menu-toggle" aria-label="Ouvrir le menu">&#9776;</button>
   <nav>
-    <ul>
+    <ul id="main-nav">
       <li><a href="index.html">Accueil</a></li>
       <li><a href="projets.html" class="active">Projets</a></li>
       <li><a href="contact.html">Contact</a></li>
@@ -24,207 +204,164 @@
   <h1>Mes Projets</h1>
 
   <div class="projet">
-    <img src="image/horloge.png" alt="Projet 1">
+    <img src="image/horloge.png" alt="Projet 1" />
     <div class="details">
       <h2>Horloge fonctionnelle</h2>
       <p>Une horloge fonctionnelle réalisée avec JavaScript pour afficher l'heure en temps réel.</p>
       <p class="technologies"><strong>Technologies :</strong> JavaScript, HTML, CSS</p>
-      <a href="https://tina509.github.io/projet-horloge/" target="_blank">Voir sur GitHub</a>
+      <a href="https://tina509.github.io/projet-horloge/" target="_blank" rel="noopener noreferrer">Voir sur GitHub</a>
     </div>
   </div>
 
   <div class="projet">
-    <img src="image/image.png" alt="Projet 2">
+    <img src="image/image.png" alt="Projet 2" />
     <div class="details">
       <h2>Générateur de Citations</h2>
       <p>Application web utilisant une API pour afficher aléatoirement des citations inspirantes.</p>
       <p class="technologies"><strong>Technologies :</strong> JavaScript, API REST, HTML, CSS</p>
-      <a href="https://tina509.github.io/generateur-citations/" target="_blank">Voir sur GitHub</a>
+      <a href="https://tina509.github.io/generateur-citations/" target="_blank" rel="noopener noreferrer">Voir sur GitHub</a>
     </div>
   </div>
 
   <div class="projet">
-    <img src="image/liste.png" alt="Projet 3">
+    <img src="image/liste.png" alt="Projet 3" />
     <div class="details">
       <h2>Mini ToDo Liste</h2>
       <p>Liste de tâches simple avec sauvegarde locale grâce au LocalStorage, développée en JavaScript.</p>
       <p class="technologies"><strong>Technologies :</strong> JavaScript, LocalStorage, HTML, CSS</p>
-      <a href="https://tina509.github.io/todo-list/" target="_blank">Voir sur GitHub</a>
+      <a href="https://tina509.github.io/todo-list/" target="_blank" rel="noopener noreferrer">Voir sur GitHub</a>
     </div>
   </div>
 
   <div class="projet">
-    <img src="image/reseau.png" alt="Projet 4">
+    <img src="image/reseau.png" alt="Projet 4" />
     <div class="details">
       <h2>Projet Réseau</h2>
       <p>Configuration complète de réseaux avec Cisco, VLAN, routage et sécurité.</p>
       <p class="technologies"><strong>Technologies :</strong> Cisco IOS, VLAN, Routage, Sécurité réseau</p>
-     <p><em>Projet non disponible sur GitHub.</em></p>
-    <a href="contact.html" class="btn-contact" style="display:inline-block; padding:8px 15px; background-color:#b366ff; color:#2c003e; border-radius:5px; text-decoration:none; font-weight:bold;">Contactez-moi</a>
-
+      <p><em>Projet non disponible sur GitHub.</em></p>
+      <a href="contact.html" class="btn-contact" style="display:inline-block; padding:8px 15px; background-color:#b366ff; color:#2c003e; border-radius:5px; text-decoration:none; font-weight:bold;">Contactez-moi</a>
     </div>
   </div>
 
   <div class="projet">
-    <img src="image/package.png" alt="Projet 5">
+    <img src="image/package.png" alt="Projet 5" />
     <div class="details">
       <h2>Flyer Studio</h2>
       <p>Création de flyers professionnels pour des studios avec Photoshop.</p>
       <p class="technologies"><strong>Technologies :</strong> Photoshop, Design graphique</p>
-     <p><em>Projet non disponible sur GitHub.</em></p>
-    <a href="contact.html" class="btn-contact" style="display:inline-block; padding:8px 15px; background-color:#b366ff; color:#2c003e; border-radius:5px; text-decoration:none; font-weight:bold;">Contactez-moi</a>
-
+      <p><em>Projet non disponible sur GitHub.</em></p>
+      <a href="contact.html" class="btn-contact" style="display:inline-block; padding:8px 15px; background-color:#b366ff; color:#2c003e; border-radius:5px; text-decoration:none; font-weight:bold;">Contactez-moi</a>
     </div>
   </div>
 
   <div class="projet">
-    <img src="image/flyer.png" alt="Projet 6">
+    <img src="image/flyer.png" alt="Projet 6" />
     <div class="details">
       <h2>Flyer</h2>
       <p>Design et mise en page de flyers variés pour événements et promotions.</p>
-          <p class="technologies"><strong>Technologies :</strong> Photoshop, InDesign</p>
-       <p><em>Projet non disponible sur GitHub.</em></p>
-    <a href="contact.html" class="btn-contact" style="display:inline-block; padding:8px 15px; background-color:#b366ff; color:#2c003e; border-radius:5px; text-decoration:none; font-weight:bold;">Contactez-moi</a>
-
+      <p class="technologies"><strong>Technologies :</strong> Photoshop, InDesign</p>
+      <p><em>Projet non disponible sur GitHub.</em></p>
+      <a href="contact.html" class="btn-contact" style="display:inline-block; padding:8px 15px; background-color:#b366ff; color:#2c003e; border-radius:5px; text-decoration:none; font-weight:bold;">Contactez-moi</a>
     </div>
   </div>
 
   <div class="projet">
-    <img src="image/shop.png" alt="Projet 7">
+    <img src="image/shop.png" alt="Projet 7" />
     <div class="details">
       <h2>Shop</h2>
       <p>Design et mise en page de flyers variés pour Business.</p>
       <p class="technologies"><strong>Technologies :</strong> Photoshop, Design graphique</p>
-     <p><em>Projet non disponible sur GitHub.</em></p>
-    <a href="contact.html" class="btn-contact" style="display:inline-block; padding:8px 15px; background-color:#b366ff; color:#2c003e; border-radius:5px; text-decoration:none; font-weight:bold;">Contactez-moi</a>
-
+      <p><em>Projet non disponible sur GitHub.</em></p>
+      <a href="contact.html" class="btn-contact" style="display:inline-block; padding:8px 15px; background-color:#b366ff; color:#2c003e; border-radius:5px; text-decoration:none; font-weight:bold;">Contactez-moi</a>
     </div>
   </div>
 
   <div class="projet">
-    <img src="image/e-commerce.png" alt="Projet 8">
+    <img src="image/e-commerce.png" alt="Projet 8" />
     <div class="details">
       <h2>Site Mini Marché</h2>
       <p>application web pour un mini marché avec catalogue produits et panier avec django.</p>
-          <p class="technologies"><strong>Technologies :</strong> HTML, CSS, JavaScript</p>
-       <p><em>Projet non disponible sur GitHub.</em></p>
-    <a href="contact.html" class="btn-contact" style="display:inline-block; padding:8px 15px; background-color:#b366ff; color:#2c003e; border-radius:5px; text-decoration:none; font-weight:bold;">Contactez-moi</a>
-
+      <p class="technologies"><strong>Technologies :</strong> HTML, CSS, JavaScript</p>
+      <p><em>Projet non disponible sur GitHub.</em></p>
+      <a href="contact.html" class="btn-contact" style="display:inline-block; padding:8px 15px; background-color:#b366ff; color:#2c003e; border-radius:5px; text-decoration:none; font-weight:bold;">Contactez-moi</a>
     </div>
   </div>
 
   <div class="projet">
-    <img src="image/panier.png" alt="Projet 9">
+    <img src="image/panier.png" alt="Projet 9" />
     <div class="details">
       <h2>Projet Django</h2>
       <p>Application web développée avec Django pour gestion de contenu.</p>
       <p class="technologies"><strong>Technologies :</strong> Python, Django, HTML, CSS</p>
-       <p><em>Projet non disponible sur GitHub.</em></p>
-    <a href="contact.html" class="btn-contact" style="display:inline-block; padding:8px 15px; background-color:#b366ff; color:#2c003e; border-radius:5px; text-decoration:none; font-weight:bold;">Contactez-moi</a>
-
+      <p><em>Projet non disponible sur GitHub.</em></p>
+      <a href="contact.html" class="btn-contact" style="display:inline-block; padding:8px 15px; background-color:#b366ff; color:#2c003e; border-radius:5px; text-decoration:none; font-weight:bold;">Contactez-moi</a>
     </div>
   </div>
 
   <div class="projet">
-    <img src="image/formulaire.png" alt="Projet 10">
+    <img src="image/formulaire.png" alt="Projet 10" />
     <div class="details">
       <h2>Projet Formulaire</h2>
       <p>Création d'un formulaire interactif avec validation en JavaScript pour un site web moderne.</p>
       <p class="technologies"><strong>Technologies :</strong> JavaScript, HTML, CSS</p>
-      <a href="https://tina509.github.io/projet-formulaire/" target="_blank">Voir sur GitHub</a>
+      <a href="https://tina509.github.io/projet-formulaire/" target="_blank" rel="noopener noreferrer">Voir sur GitHub</a>
     </div>
   </div>
 
   <div class="projet">
-    <img src="image/arduino.png" alt="Projet 11">
+    <img src="image/arduino.png" alt="Projet 11" />
     <div class="details">
       <h2>Projet Arduino</h2>
       <p>Montage électronique et programmation avec Arduino : allumage de LED, capteurs, et petits automatismes.</p>
-          <p class="technologies"><strong>Technologies :</strong> Arduino, C/C++</p>
-       <p><em>Projet non disponible sur GitHub.</em></p>
-    <a href="contact.html" class="btn-contact" style="display:inline-block; padding:8px 15px; background-color:#b366ff; color:#2c003e; border-radius:5px; text-decoration:none; font-weight:bold;">Contactez-moi</a>
-
+      <p class="technologies"><strong>Technologies :</strong> Arduino, C/C++</p>
+      <p><em>Projet non disponible sur GitHub.</em></p>
+      <a href="contact.html" class="btn-contact" style="display:inline-block; padding:8px 15px; background-color:#b366ff; color:#2c003e; border-radius:5px; text-decoration:none; font-weight:bold;">Contactez-moi</a>
     </div>
   </div>
 
   <div class="projet">
-    <img src="image/slider.png" alt="Projet 12">
+    <img src="image/slider.png" alt="Projet 12" />
     <div class="details">
       <h2>Slider d'Images</h2>
       <p>Un slider d'images dynamique réalisé avec JavaScript permettant de faire défiler des photos automatiquement.</p>
       <p class="technologies"><strong>Technologies :</strong> JavaScript, HTML, CSS</p>
-      <a href="https://tina509.github.io/projet-slider/" target="_blank">Voir sur GitHub</a>
+      <a href="https://tina509.github.io/projet-slider/" target="_blank" rel="noopener noreferrer">Voir sur GitHub</a>
     </div>
   </div>
 
   <div class="projet">
-    <img src="image/photo.png" alt="Projet 13">
+    <img src="image/photo.png" alt="Projet 13" />
     <div class="details">
       <h2>Compteur</h2>
       <p>Un compteur numérique réalisé avec JavaScript permettant d'incrémenter une valeur à chaque clic.</p>
-       <p class="technologies"><strong>Technologies :</strong> JavaScript, HTML, CSS</p>
-      <a href="https://tina509.github.io/projet-compteur/" target="_blank">Voir sur GitHub</a>
+      <p class="technologies"><strong>Technologies :</strong> JavaScript, HTML, CSS</p>
+      <a href="https://tina509.github.io/projet-compteur/" target="_blank" rel="noopener noreferrer">Voir sur GitHub</a>
     </div>
   </div>
 
-  <!-- Bouton Ajouter Projet
-  <div style="text-align: center; margin-top: 30px;">
-    <button onclick="afficherFormulaire()" style="padding: 10px 20px; background-color: #b366ff; color: #2c003e; border: none; border-radius: 5px; cursor: pointer; font-weight: bold;">Ajouter un projet</button>
-  </div>
-
-  Formulaire caché 
-  <div id="formulaireAjout" style="display: none; margin-top: 20px; text-align: center;">
-    <input type="text" id="titreProjet" placeholder="Titre du projet" style="padding: 10px; width: 50%; margin: 5px;"><br>
-    <input type="text" id="descriptionProjet" placeholder="Description du projet" style="padding: 10px; width: 50%; margin: 5px;"><br>
-    <input type="text" id="lienProjet" placeholder="Lien GitHub" style="padding: 10px; width: 50%; margin: 5px;"><br>
-    <input type="text" id="imageProjet" placeholder="Lien de l'image (ex: image/monimage.png)" style="padding: 10px; width: 50%; margin: 5px;"><br>
-    <button onclick="ajouterProjet()" style="padding: 10px 20px; background-color: #b366ff; color: #2c003e; border: none; border-radius: 5px; cursor: pointer; font-weight: bold; margin-top: 10px;">Valider</button>
-  </div>
-
-</section> -->
+</section>
 
 <footer>
   <p>&copy; 2025 - Mon Portfolio</p>
 </footer>
 
-<!-- <script>
-  function afficherFormulaire() {
-    const form = document.getElementById('formulaireAjout');
-    form.style.display = form.style.display === 'none' ? 'block' : 'none';
-  }
+<script>
+  const menuToggle = document.getElementById('menu-toggle');
+  const nav = document.getElementById('main-nav');
 
-  function ajouterProjet() {
-    const titre = document.getElementById('titreProjet').value.trim();
-    const description = document.getElementById('descriptionProjet').value.trim();
-    const lien = document.getElementById('lienProjet').value.trim();
-    const image = document.getElementById('imageProjet').value.trim();
+  menuToggle.addEventListener('click', () => {
+    nav.classList.toggle('active');
+  });
 
-    if (titre && description && lien && image) {
-      const div = document.createElement('div');
-      div.className = 'projet';
-      div.innerHTML = `
-        <img src="${image}" alt="${titre}">
-        <div class="details">
-          <h2>${titre}</h2>
-          <p>${description}</p>
-          <a href="${lien}" target="_blank">Voir sur GitHub</a>
-        </div>
-      `;
-
-      document.querySelector('.projets').insertBefore(div, document.getElementById('formulaireAjout').parentElement);
-
-      // Réinitialiser le formulaire
-      document.getElementById('titreProjet').value = '';
-      document.getElementById('descriptionProjet').value = '';
-      document.getElementById('lienProjet').value = '';
-      document.getElementById('imageProjet').value = '';
-
-      afficherFormulaire();
-    } else {
-      alert('Veuillez remplir tous les champs.');
-    }
-  }
-</script> -->
+  nav.querySelectorAll('a').forEach(link => {
+    link.addEventListener('click', () => {
+      if (nav.classList.contains('active')) {
+        nav.classList.remove('active');
+      }
+    });
+  });
+</script>
 
 </body>
 </html>
