--- a/contact.html
+++ b/contact.html
@@ -4,13 +4,192 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contact - Mon Portfolio</title>
-  <link rel="stylesheet" href="css/style.css" />
+
+  <style>
+    /* === STYLE GLOBAL === */
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #2c003e;
+      color: white;
+      min-height: 100vh;
+    }
+
+    /* === HEADER & NAVIGATION === */
+    header {
+      background-color: #3d0066;
+      padding: 15px 20px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.5);
+      position: sticky;
+      top: 0;
+      z-index: 100;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+
+    nav ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      gap: 30px;
+    }
+
+    nav ul li a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 18px;
+      padding: 6px 12px;
+      border-radius: 5px;
+      transition: background-color 0.3s;
+      display: block;
+    }
+
+    nav ul li a:hover,
+    nav ul li a.active {
+      background-color: #b366ff;
+      color: #2c003e;
+    }
+
+    /* Hamburger button - hidden on desktop */
+    #menu-toggle {
+      display: none;
+      font-size: 28px;
+      background: none;
+      border: none;
+      color: white;
+      cursor: pointer;
+    }
+
+    /* === RESPONSIVE === */
+    @media (max-width: 768px) {
+      nav ul {
+        position: fixed;
+        top: 60px;
+        right: 0;
+        background-color: #3d0066;
+        width: 200px;
+        height: calc(100% - 60px);
+        flex-direction: column;
+        gap: 0;
+        padding-top: 20px;
+        transform: translateX(100%);
+        transition: transform 0.3s ease-in-out;
+        box-shadow: -2px 0 5px rgba(0,0,0,0.5);
+      }
+
+      nav ul.active {
+        transform: translateX(0);
+      }
+
+      nav ul li {
+        margin-bottom: 20px;
+        padding-left: 20px;
+      }
+
+      #menu-toggle {
+        display: block;
+      }
+    }
+
+    /* === SECTION CONTACT === */
+    .contact-section {
+      max-width: 600px;
+      margin: 50px auto 100px;
+      padding: 20px;
+      background-color: #3d0066;
+      border-radius: 15px;
+      box-shadow: 0 0 15px #00000080;
+      color: white;
+      text-align: center;
+    }
+
+    .contact-section h1 {
+      color: #d9b3ff;
+      margin-bottom: 30px;
+      font-size: 2.5rem;
+    }
+
+    .contact-form {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      margin-bottom: 40px;
+      text-align: left;
+    }
+
+    .contact-form label {
+      font-weight: bold;
+      margin-bottom: 5px;
+      display: block;
+    }
+
+    .contact-form input,
+    .contact-form textarea {
+      padding: 10px;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+      resize: vertical;
+      background-color: #5a2393;
+      color: white;
+      transition: background-color 0.3s, outline 0.3s;
+    }
+
+    .contact-form input::placeholder,
+    .contact-form textarea::placeholder {
+      color: #d9b3ffaa;
+    }
+
+    .contact-form input:focus,
+    .contact-form textarea:focus {
+      outline: 2px solid #b366ff;
+      background-color: #6c2ca6;
+      color: white;
+    }
+
+    .contact-form button {
+      background-color: #b366ff;
+      border: none;
+      padding: 12px;
+      border-radius: 8px;
+      font-size: 18px;
+      font-weight: bold;
+      color: #2c003e;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    .contact-form button:hover {
+      background-color: #d9b3ff;
+      color: #2c003e;
+    }
+
+    .contact-info {
+      font-size: 18px;
+      line-height: 1.6;
+      text-align: left;
+    }
+
+    .contact-info a {
+      color: #b366ff;
+      text-decoration: none;
+      transition: text-decoration 0.3s;
+    }
+
+    .contact-info a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
 
 <header>
+  <button id="menu-toggle" aria-label="Ouvrir le menu">&#9776;</button>
   <nav>
-    <ul>
+    <ul id="main-nav">
       <li><a href="index.html">Accueil</a></li>
       <li><a href="projets.html">Projets</a></li>
       <li><a href="contact.html" class="active">Contact</a></li>
@@ -49,10 +228,25 @@
 </footer>
 
 <script>
+  const menuToggle = document.getElementById('menu-toggle');
+  const nav = document.getElementById('main-nav');
+
+  menuToggle.addEventListener('click', () => {
+    nav.classList.toggle('active');
+  });
+
+  nav.querySelectorAll('a').forEach(link => {
+    link.addEventListener('click', () => {
+      if (nav.classList.contains('active')) {
+        nav.classList.remove('active');
+      }
+    });
+  });
+
   function envoyerMessage(e) {
-    e.preventDefault(); 
+    e.preventDefault();
     alert("Merci pour votre message. Je prendrai contact avec vous dans les plus brefs délais.");
-    document.querySelector('.contact-form').reset(); 
+    document.querySelector('.contact-form').reset();
   }
 </script>
 
