--- a/blog.html
+++ b/blog.html
@@ -1,11 +1,100 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Mon Blog - Astuces & Conseils</title>
-  <link rel="stylesheet" href="css/style.css">
+
   <style>
+    /* === STYLE GLOBAL === */
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #2c003e;
+      color: white;
+      min-height: 100vh;
+    }
+
+    /* === HEADER & NAVIGATION === */
+    header {
+      background-color: #3d0066;
+      padding: 15px 20px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.5);
+      position: sticky;
+      top: 0;
+      z-index: 100;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+
+    nav ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      gap: 30px;
+    }
+
+    nav ul li a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 18px;
+      padding: 6px 12px;
+      border-radius: 5px;
+      transition: background-color 0.3s;
+      display: block;
+    }
+
+    nav ul li a:hover,
+    nav ul li a.active {
+      background-color: #b366ff;
+      color: #2c003e;
+    }
+
+    /* Hamburger button - hidden on desktop */
+    #menu-toggle {
+      display: none;
+      font-size: 28px;
+      background: none;
+      border: none;
+      color: white;
+      cursor: pointer;
+    }
+
+    /* === RESPONSIVE === */
+    @media (max-width: 768px) {
+      nav ul {
+        position: fixed;
+        top: 60px;
+        right: 0;
+        background-color: #3d0066;
+        width: 200px;
+        height: calc(100% - 60px);
+        flex-direction: column;
+        gap: 0;
+        padding-top: 20px;
+        transform: translateX(100%);
+        transition: transform 0.3s ease-in-out;
+        box-shadow: -2px 0 5px rgba(0,0,0,0.5);
+      }
+
+      nav ul.active {
+        transform: translateX(0);
+      }
+
+      nav ul li {
+        margin-bottom: 20px;
+        padding-left: 20px;
+      }
+
+      #menu-toggle {
+        display: block;
+      }
+    }
+
+    /* === SECTION BLOG === */
     .blog-container {
       max-width: 900px;
       margin: 50px auto;
@@ -33,6 +122,7 @@
     .article p {
       line-height: 1.6;
       margin: 15px 0;
+      white-space: pre-line; /* Pour gérer les retours à la ligne dans le contenu */
     }
 
     .article a {
@@ -73,14 +163,13 @@
     .add-section textarea {
       width: 80%;
       padding: 10px;
-      margin: 10px 0;
+      margin: 10px auto;
       border: none;
       border-radius: 5px;
       background-color: #5a2393;
       color: white;
       display: block;
-      margin-left: auto;
-      margin-right: auto;
+      font-size: 16px;
     }
 
     .add-section button {
@@ -91,6 +180,8 @@
       color: #2c003e;
       cursor: pointer;
       font-weight: bold;
+      font-size: 16px;
+      margin-top: 10px;
     }
 
     .add-section button:hover {
@@ -101,8 +192,9 @@
 <body>
 
 <header>
+  <button id="menu-toggle" aria-label="Ouvrir le menu">&#9776;</button>
   <nav>
-    <ul>
+    <ul id="main-nav">
       <li><a href="index.html">Accueil</a></li>
       <li><a href="projets.html">Projets</a></li>
       <li><a href="contact.html">Contact</a></li>
@@ -125,13 +217,11 @@
     - Privilégiez des couleurs et typographies harmonieuses.<br>
     - Ne négligez jamais l'accessibilité.
     </p>
-    <!-- <button class="supprimer-btn" onclick="supprimer(this)">Supprimer</button> -->
   </div>
 
   <div class="article">
     <h2>Pourquoi apprendre JavaScript est indispensable</h2>
     <p>JavaScript permet d'ajouter de l'interactivité à vos sites web : boutons dynamiques, formulaires intelligents, animations... C'est aussi la porte d'entrée vers des frameworks modernes comme React ou Vue.js.</p>
-    <!-- <button class="supprimer-btn" onclick="supprimer(this)">Supprimer</button> -->
   </div>
 
   <div class="article">
@@ -140,9 +230,7 @@
     - Visual Studio Code (éditeur de code)<br>
     - GitHub (versionnage et partage de projets)<br>
     - Photoshop (design rapide)<br>
-    - Remove Background (enlever les arrière-plans)
-    <!-- </p>
-    <button class="supprimer-btn" onclick="supprimer(this)">Supprimer</button>
+    - Remove Background (enlever les arrière-plans)</p>
   </div>
 
   <div class="add-section">
@@ -158,10 +246,23 @@
 </footer>
 
 <script>
-  function supprimer(button) {
-    button.parentElement.remove();
-  }
+  // Toggle menu responsive
+  const menuToggle = document.getElementById('menu-toggle');
+  const nav = document.getElementById('main-nav');
 
+  menuToggle.addEventListener('click', () => {
+    nav.classList.toggle('active');
+  });
+
+  nav.querySelectorAll('a').forEach(link => {
+    link.addEventListener('click', () => {
+      if (nav.classList.contains('active')) {
+        nav.classList.remove('active');
+      }
+    });
+  });
+
+  // Ajouter un article dynamique
   function ajouterArticle() {
     const titre = document.getElementById('titre').value.trim();
     const contenu = document.getElementById('contenu').value.trim();
@@ -169,6 +270,8 @@
     if (titre && contenu) {
       const article = document.createElement('div');
       article.className = 'article';
+
+      // Utiliser white-space: pre-line en CSS pour respecter les sauts de ligne dans le contenu
       article.innerHTML = `<h2>${titre}</h2><p>${contenu}</p>`;
 
       const btnSupprimer = document.createElement('button');
@@ -182,13 +285,14 @@
 
       document.querySelector('.add-section').before(article);
 
+      // Reset form
       document.getElementById('titre').value = '';
       document.getElementById('contenu').value = '';
     } else {
       alert('Veuillez remplir le titre et le contenu.');
     }
   }
-</script> -->
+</script>
 
 </body>
 </html>
